--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@
 \lfe{Lehr- und Forschungseinheit Medieninformatik}
 \professor{Prof.\ Dr.\ Andreas Butz}
 \type{Master's Thesis}
-\title{Explanation Adaptation for Hybrid Multimedia Recommendations}
+\title{Explanation Adaptation for Hybrid Multimedia Recommendation System}
 \author{AUTHOR}
 \email{EMAIL}
 \bearbeitungszeitraum{START bis END} 
@@ -50,6 +50,16 @@
 \cleardoublepage
 
 \input{src/ch01-intro}
+\input{src/ch02-related-work}
+\input{src/ch03-system-design}
+\input{src/ch04-experiment}
+\input{src/ch05-evaluation}
+\input{src/ch06-application}
+\input{src/ch07-discussion}
+\input{src/ch08-conclusion}
+\input{src/ch09-appendix}
+
+
 \input{literatures/bib.tex}
 
 \end{document}
