--- a/literatures/list.bib
+++ b/literatures/list.bib
@@ -31,6 +31,28 @@
   year={2001}
 }
 
+@article{ahn2006utilizing,
+  title={Utilizing popularity characteristics for product recommendation},
+  author={Ahn, Hyung Jun},
+  journal={International Journal of Electronic Commerce},
+  volume={11},
+  number={2},
+  pages={59--80},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+@article{safoury2013exploiting,
+  title={Exploiting user demographic attributes for solving cold-start problem in recommender system},
+  author={Safoury, Laila and Salah, Akram},
+  journal={Lecture Notes on Software Engineering},
+  volume={1},
+  number={3},
+  pages={303--307},
+  year={2013},
+  publisher={IACSIT Press}
+}
+
 @book{lamport1994latex,
   title={LATEX: a document preparation system: user's guide and reference manual},
   author={Lamport, Leslie},
