--- a/theme/lmuthesis.sty
+++ b/theme/lmuthesis.sty
@@ -91,6 +91,7 @@
     urlcolor=bbbbb
 ]{hyperref}
 
+\graphicspath{ {./images/} }
 \usepackage{graphicx}
 \usepackage{fancyhdr}
 \fancyhead[LE,RO,LO,RE]{}
