--- a/src/ch03-system-design.tex
+++ b/src/ch03-system-design.tex
@@ -3,6 +3,63 @@
 
 \epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
 
+\subsection{System Architecture Diagram}
+\begin{figure}[h]
+\caption{System Architecture}
+\centering
+\includegraphics[width=1.0\textwidth]{system_architecture}
+\end{figure}
+\subsubsection{MovieLens Dataset}
+%build user database and movie database
+We have selected the MovieLens dataset from the GroupLens Research Group at the University of Minnesota. The MovieLens 1M dataset is used as the data source in this paper. It contains 1 million ratings of 4,000 movies from 6,000 users. It is divided into three tables: movie ratings, movie metadata (genre style and age), and demographic data about users (age, zip code, gender, and occupation).
+\subsubsection{UMNN}
+\subsubsection{Frontend and Backend}
+\subsubsection{Cold Start}
+
+\subsection{Recommendation Strategy}
+\subsubsection{Recommendation Style}
+\begin{itemize}
+
+\item[(a)]\textbf{Popularity-Based}\\
+There are two reasons for recommending based on popularity. First, popularity often represents the important characteristics of a product. Some users utilize extensive sources of information before making decisions to choose a movie, however, the others depend on simple and limited sources of information. But they all will be affected by the popularity of movies to some extent. Second, the popularity of a movie greatly influences user's decisions. From a psychological perspective, when recommending popular movies to users, even if they are not the type the user likes, users usually subconsciously give these movies a higher rating\cite{ahn2006utilizing}. So popularity-based recommendation is a very important and simple method in the early days. In this paper, popularity-based method is used as the basis for the other four recommendation methods.
+\item[(b)]\textbf{User-Based}\\
+\begin{figure}[h]
+\caption{user-based recommendation strategy}
+\centering
+\includegraphics[width=0.5\textwidth]{neural_network_user_based}
+\end{figure}
+The user-based recommendation strategy more considers the interests of new user and other users with the same hobbies, recommends items that other users like / visited to the new user, and has little to do with new user's current behavior.What will be recommended to a new user, depends on what the other users have visited before. The recommended items are the favorite items of users with the same hobby, so it has a hotspot effect. it can recommend the items that the other users have just visited. It has strong real-time performance, especially the newly introduced hot spots, which can spread quickly and solve the cold start problem of new-item.
+\item[(c)]\textbf{Item-Based}\\
+\begin{figure}[h]
+\caption{item-based recommendation strategy}
+\centering
+\includegraphics[width=0.5\textwidth]{neural_network_item_based}
+\end{figure}
+Item-based mainly uses users' historical interests to make recommendations. Recommending items that are similar to the user's history. This method has a lot to do with the user's current behavior. The similarity between the item recommended to the user and the item previously selected by the user is understandable by the user, which is called Interpretable. Most of the recommended items are not popular, but are related to the interests of users. This recommendation method has the highest accuracy when the user's interest is long-term and fixed. The significance of Item-based recommendation is to help users find items related to their interests. The recommended item is not related to user identity, so it is better to solve the problem of new users.
+\par Badrul et al.\cite{sarwar2001item} compared the performance of user-based and item-based and demonstrated that the item-based algorithm provides better quality of prediction than the user-based algorithm.
+\item[(d)]\textbf{Demographic-Based}\\
+\begin{figure}[h]
+\caption{demographic-based recommendation strategy}
+\centering
+\includegraphics[width=0.5\textwidth]{neural_network_demographic_based}
+\end{figure}
+According to the basic information of the system user, find out the relevance of the user, and then make recommendations. At present, it is rarely used alone in large systems, and it is usually used in combination with other recommendation algorithms. The usual method is to classify the user based on the user's registration information, and then recommend to the user the items in the category to which she belongs. In this paper, we use gender, age and occupation of user as feature of demographic-based recommendation method.
+\item[(e)]\textbf{Content-Based}\\
+\begin{figure}[h]
+\caption{content-based recommendation strategy}
+\centering
+\includegraphics[width=0.5\textwidth]{neural_network_content_based}
+\end{figure}
+Based on the user's past browsing history, make recommendations to the user that he/she has not viewed. Recommendations are generally based on keywords or content features. For example, if a user has previously chosen to be interested in a certain director's movie, the user will be recommended with the other movie works of this director. The advantage of this method is that there is no popularity bias, items with rare features can be recommended, and user content characteristics can be used to provide recommendation explanations. The disadvantage is that the content must be machine-readable and meaningful, and the features of the recommended content need to be archived in advance.
+\par Recommend movies that are similar to movies that users have liked. It is mainly based on the comparison of movie attribute information and user portrait information. The core problem is how to establish the association between movie attributes and user information. it assumes that users will rate items having alike features similarly\cite{safoury2013exploiting}.
+
+\end{itemize}
+
+\par For various reasons, it is easier to collect the user's past behavior than to collect user information, but CF-based (user-based and item-based) has his limitations. When the scoring is very sparse, the prediction accuracy will be greatly reduced. And the cold start of new products is also a problem for CF. In general, therefore, most of today's recommendation systems use a hybrid recommendation method.
+\subsubsection{Recommendation Explanation Strategy}
+\subsubsection{Recommendation Explanation Adaptation Strategy}
+%rule based
+
 \subsection{Machine Learning Algorithm}
 
 \subsubsection{Tool and Library}
@@ -13,25 +70,6 @@ PyTorch\cite{ketkar2017introduction} and TensorFlow\cite{abadi2016tensorflow} ar
 %node and item
 \subsubsection{Training Weights}
 
-\subsection{System Architecture Diagram}
-\subsubsection{Recommendation Strategy}
-\paragraph{Recommendation Style}
-\begin{itemize}
-\item[(a)]\textbf{User-Based}\\
-The user-based recommendation strategy more considers the interests of new user and other users with the same hobbies, recommends items that other users like / visited to the new user, and has little to do with new user's current behavior.What will be recommended to a new user, depends on what the other users have visited before. The recommended items are the favorite items of users with the same hobby, so it has a hotspot effect. it can recommend the items that the other users have just visited. It has strong real-time performance, especially the newly introduced hot spots, which can spread quickly and solve the cold start problem of new-item.
-\item[(b)]\textbf{Item-Based}\\
-Item-based mainly uses users' historical interests to make recommendations. Recommending items that are similar to the user's history. This method has a lot to do with the user's current behavior. The similarity between the item recommended to the user and the item previously selected by the user is understandable by the user, which is called Interpretable. Most of the recommended items are not popular, but are related to the interests of users. This recommendation method has the highest accuracy when the user's interest is long-term and fixed. The significance of Item-based recommendation is to help users find items related to their interests. The recommended item is not related to user identity, so it is better to solve the problem of new users.
-\par Badrul et al.\cite{sarwar2001item} compared the performance of user-based and item-based and demonstrated that the item-based algorithm provides better quality of prediction than the user-based algorithm.
-\item[(c)]\textbf{Demographic-Based}\\
-According to the basic information of the system user, find out the relevance of the user, and then make recommendations. At present, it is rarely used alone in large systems, and it is usually used in combination with other recommendation algorithms. The usual method is to classify the user based on the user's registration information, and then recommend to the user the items in the category to which she belongs. In this paper, we use gender, age and occupation of user as feature of demographic-based recommendation method.
-\item[(d)]\textbf{Content-Based}\\
-Based on the user's past browsing history, make recommendations to the user that he/she has not viewed. Recommendations are generally based on keywords or content features. For example, if a user has previously chosen to be interested in a certain director's movie, the user will be recommended with the other movie works of this director. The advantage of this method is that there is no popularity bias, items with rare features can be recommended, and user content characteristics can be used to provide recommendation explanations. The disadvantage is that the content must be machine-readable and meaningful, and the features of the recommended content need to be archived in advance.
-\item[(e)]\textbf{Popularity-Based}\\
-Popularity-Based is
-\end{itemize}
-\subsubsection{Recommendation Explanation Strategy}
-\subsubsection{Recommendation Explanation Adaptation Strategy}
-%rule based
 
 \subsection{User Interface Prototype} 
 
