--- a/src/ch04-experiment.tex
+++ b/src/ch04-experiment.tex
@@ -4,6 +4,8 @@
 
 \epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
 
+\subsection{Data Set}
+
 \subsection{User Study Process}
 
 \subsection{User Study Metric}
