--- a/thesis.tex
+++ b/thesis.tex
@@ -13,13 +13,13 @@
 % meta informations
 \department{Institut f\"ur Informatik}
 \lfe{Lehr- und Forschungseinheit Medieninformatik}
-\professor{Prof.\ Dr.\ Andreas Butz}
+\professor{Prof.\ Dr.\ Heinrich Hussmann}
 \type{Master's Thesis}
 \title{Explanation Adaptation for Hybrid Multimedia Recommendation System}
-\author{AUTHOR}
-\email{EMAIL}
+\author{Zhe Li}
+\email{Li.Zhe@campus.lmu.de}
 \bearbeitungszeitraum{START bis END} 
-\supervisor{SUPERVISOR}
+\supervisor{Zhiwei Han and Yuanting Liu}
 \taskdescription{
     \begin{description}
         \item[THESIS TITLE]
